-*- text -*-

Changes in 2.46:

* Add support for AMD Zen6 processor.

* Emit an SFrame FRE with zero offsets to convey an undefined return address
  in the SFrame stack trace format.

* ELF targets can now have section entity size specified for arbitrary
  sections, using the new attribute letter 'E'.

* NaCl target support is removed.

* Solaris/PowerPC target support is removed.

* Add support for RISC-V standard extensions:
  sdtrig v1.0, ssstrict v1.0.

* The assembler now supports generating SFrame Version 3 format.  This version
  supports .text > 2 GiB, support for marking outermost frames, support for
  marking signal trampolines, and support for "flexible" frames which have
  non-SP/FP based CFA, or save FP/RA in REG among other patterns.

* New command line option --gsframe-3 causes GAS to emit SFrame section in
  version 3.  SFrame version 3 is emitted by default with the existing option
  --gsframe.

* Add support for the remaining Armv9.6 instructions, enabled by the
  extensions '+sme-mop4', '+sme-tmop', '+ssve-bitperm' and '+ssve-fexpa'.

* Add support for Armv9.7 extensions, enabled by the option `-march=armv9.7-a'
  and extensions '+f16f32dot', '+f16f32mm', '+f16mm', '+gcie', '+lscp',
  '+mpamv2', '+mtetc', '+sme2p3', '+sve-b16mm', '+sve2p3' and '+tlbid'.

* Add support for Arm future technologies POE2 and vMTE, enabled by the
  extensions '+poe2', '+tev' and '+mops-go'.

Changes in 2.45:

* Add support to generate SFrame stack trace information (.sframe)
  from CFI directives on s390 64-bit (s390x).

* All SFrame sections generated by gas have the header flag
  SFRAME_F_FDE_FUNC_START_PCREL set.  gas was already emitting SFrame sections
  with the applicable encoding.  Setting the flag ensures compliance with the
  updated SFrame V2 specification.

  ELF SFrame sections now have section type set to SHT_GNU_SFRAME.

* Add .errif and .warnif directives, permitting user-controlled diagnostics